--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 </head>
 <body>
     <div id ="controls" >
-
+        <button> <img src="img/color.png"> </button>
+        <button> <img src="img/pen.png"> </button>
+        <button> <img src="img/rect.png"> </button>
+        <button> <img src="img/ellips.png"></button>
+        <button> <img src="img/line.png"> </button>
+        <button> <img src="img/text.png"> </button>
+        <button> <img src="img/image.png"> </button>
     </div>
-    <canvas id="board" width="1000" height="500"> </canvas>
+
+    <canvas id="board" width="1200" height="700"> </canvas>
     <script src="drawing.js"></script>
 
 </body>
