--- a/public/index.html
+++ b/public/index.html
@@ -5,20 +5,21 @@
     <title>online BOARD</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style/style.css">
-    <link rel="stylesheet" href="../style/dialogStyle.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/dialogStyle.css">
+    <link rel="stylesheet" href="style/video.css">
 </head>
 <body>
 
 <div id="drawBoard">
     <div id="controls">
         <input type="color" id="colorPick" value="#000000">
-        <button onclick="drawByPen()"><img src="../img/pen.png"></button>
-        <button onclick="drawRectangle()"><img src="../img/rect.png"></button>
-        <button onclick="drawCircle()"><img src="../img/ellips.png"></button>
-        <button onclick="drawLine()"><img src="../img/line.png"></button>
-        <button onclick="drawText()"><img src="../img/text.png"></button>
-        <button onclick="drawImage()"><img src="../img/image.png"></button>
+        <button id="drawByPen"><img src="img/pen.png"></button>
+        <button id="drawRectangle"><img src="img/rect.png"></button>
+        <button id="drawCircle"><img src="img/ellips.png"></button>
+        <button id="drawLine"><img src="img/line.png"></button>
+        <button id="drawText"><img src="img/text.png"></button>
+        <button id="drawImage"><img src="img/image.png"></button>
     </div>
     <canvas id="board" width="1150px" height="700px"></canvas>
 </div>
@@ -29,20 +30,17 @@
 
         <form id="forSend">
             <input type="text" id="messageBox" placeholder="Type your message here"/>
-            <button type="submit" id="send" onclick="sendMSG()" title="Send Message!"><img src="../img/send2.png"
-                                                                                           height="30" width="30">
+            <button type="submit" id="send" title="Send Message!"><img src="../img/send2.png"
+                                                                       height="30" width="30">
             </button>
         </form>
     </div>
     <div id="audio">
-        <div class="meet-area">
-            <div id = "notification"></div>
-            <!-- Remote Video Elements-->
-            <div id="remote-video">
-            </div>
-            <!-- Local Video Element-->
-            <video width="200" height="170" id="local-video"></video>
+        <div id="remote_videos">
+
         </div>
+
+        <video id="local_video"></video>
     </div>
 </div>
 
@@ -79,12 +77,12 @@
     </div>
 </dialog>
 
-<script src="chat.js"></script>
-<script src="startInit.js"></script>
-<script src="drawing.js"></script>
+<script src='/socket.io/socket.io.js'></script>
+<script type="module" src="audio.js"></script>
 
-<script src = "https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"> </script>
-<script src="audio.js"></script>
+<script type="module" src="chat.js"></script>
+<script type="module" src="startInit.js"></script>
+<script type="module" src="drawing.js"></script>
 
 </body>
 </html>
